change the wifi connection from sta to ap

--- a/code/esp32/Project/platformio.ini
+++ b/code/esp32/Project/platformio.ini
@@ -3,7 +3,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-; lib_deps = 
-; 	Adafruit MPU6050
-; 	Adafruit Unified Sensor
-; 	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
+lib_deps = 
+	Adafruit MPU6050
+	Adafruit Unified Sensor
+	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
