--- a/code/esp32/Takalem/AP/platformio.ini
+++ b/code/esp32/Takalem/AP/platformio.ini
@@ -4,6 +4,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
 ; lib_deps = 
 ; 	adafruit/Adafruit MPU6050@^2.2.4
 ; 	adafruit/Adafruit Unified Sensor@^1.1.13
