establish connection between AP ans STA and begin sending data

--- a/code/esp32/Project/platformio.ini
+++ b/code/esp32/Project/platformio.ini
@@ -3,6 +3,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	Adafruit MPU6050
 	Adafruit Unified Sensor
