--- a/code/esp32/Takalem/AP/platformio.ini
+++ b/code/esp32/Takalem/AP/platformio.ini
@@ -5,7 +5,8 @@ framework = arduino
 monitor_speed = 115200
 upload_port = /dev/ttyUSB0
 monitor_port = /dev/ttyUSB0
-; lib_deps = 
-; 	adafruit/Adafruit MPU6050@^2.2.4
-; 	adafruit/Adafruit Unified Sensor@^1.1.13
-; 	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
+monitor_filters = esp32_exception_decoder
+lib_deps = 
+	adafruit/Adafruit MPU6050@^2.2.4
+	adafruit/Adafruit Unified Sensor@^1.1.13
+	tanakamasayuki/TensorFlowLite_ESP32@^1.0.0
