--- a/code/esp32/Takalem/STA/platformio.ini
+++ b/code/esp32/Takalem/STA/platformio.ini
@@ -5,6 +5,7 @@ framework = arduino
 monitor_speed = 115200
 upload_port = /dev/ttyUSB1
 monitor_port = //dev/ttyUSB1
-; lib_deps = 
-; 	adafruit/Adafruit MPU6050@^2.2.4
-; 	adafruit/Adafruit Unified Sensor@^1.1.13
+monitor_filters = esp32_exception_decoder
+lib_deps = 
+	adafruit/Adafruit MPU6050@^2.2.4
+	adafruit/Adafruit Unified Sensor@^1.1.13
